--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ dash_auth==1.4.1
 dash_bootstrap_components==1.2.1
 dash_iconify==0.1.2
 dash_labs==1.2.0
+dash_mantine_components==0.12.1
 numpy==1.24.1
 pandas==1.5.2
-plotly==5.11.0
 requests==2.26.0
